# GECore

./: .gitignore
Core/Src/: CMakeLists.txt  Main.cpp
Core/Src/Component/: Acceleration.hpp  BoundingBox.hpp  BoundingSphere.hpp  CMakeLists.txt  ComponentArray.hpp  ComponentManager.cpp  ComponentManager.hpp  CoordinateReference.hpp  Position.hpp  Rotation.hpp  Scale.hpp  Script.hpp  Texture.hpp  Velocity.hpp
Core/Src/DataType/: CoordinateSpace.hpp  IScript.hpp  PositionZ.hpp  ScaleX.hpp  StringType.hpp  TextureName.hpp
Core/Src/DataTypes/: AccelerationX.hpp  AccelerationY.hpp  AccelerationZ.hpp  ExtentX.hpp  ExtentY.hpp  ExtentZ.hpp  IScript.hpp  PositionX.hpp  PositionY.hpp  PositionZ.hpp  Radius.hpp  RotationX.hpp  RotationY.hpp  RotationZ.hpp  ScaleX.hpp  ScaleY.hpp  ScaleZ.hpp  TextureName.hpp  Time.hpp  VelocityX.hpp  VelocityY.hpp  VelocityZ.hpp
Core/Src/Entity/: CMakeLists.txt  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Signature.hpp
Core/Src/Input/: CMakeLists.txt  InputManager.cpp  InputManager.hpp  InputMapping.cpp  InputMapping.hpp
Core/Src/Scene/: CMakeLists.txt  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
Core/Src/System/: CMakeLists.txt  ISystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ScriptSystem.cpp  ScriptSystem.hpp  SystemManager.cpp  SystemManager.hpp  UISystem.cpp  UISystem.hpp
Core/Src/Texture/: CMakeLists.txt  TextureInfo.hpp  TextureManager.cpp  TextureManager.hpp
Game/: Prefabs.json
Game/Scenes/: TestScene.json
GeneratorEngine/Models/: Components.json  DataType.json  DataTypes.json  InputMapping.json  Systems.json
GeneratorEngine/Scripts/: CoreGenerator.py  Generator.py  ProjectGenerator.py
GeneratorEngine/Templates/: CMakeLists.txt.jinja  Component.h.jinja  ComponentManager.cpp.jinja  ComponentManager.h.jinja  DataType.h.jinja  InputMapping.cpp.jinja  InputMapping.h.jinja  Main.cpp.jinja  ProjectCMakeLists.txt.jinja  Signature.h.jinja  System.cpp.jinja  System.h.jinja  SystemManager.cpp.jinja  SystemManager.h.jinja  SystemManagerCMakeLists.txt.jinja
Src/: CMakeLists.txt  Main.cpp  PhysicsSystem.cpp  PhysicsSystem.hpp
Src/Component/: Acceleration.hpp  BoundingBox.hpp  BoundingSphere.hpp  CMakeLists.txt  ComponentArray.hpp  ComponentManager.cpp  ComponentManager.hpp  IComponentArray.hpp  Position.hpp  Rotation.hpp  Scale.hpp  Signature.hpp  Velocity.hpp
Src/Components/: BoundingSphere.hpp  Rotation.hpp  Scale.hpp
Src/DataTypes/: AccelerationY.hpp  AccelerationZ.hpp  PositionX.hpp  PositionY.hpp  VelocityX.hpp  VelocityZ.hpp
TestProject/: CMakeLists.txt  Main.cpp  Project.json
TestProject/Scenes/: TestScene.json
TestProject/Scripts/: TestScript.hpp
glad/src/: glad.c
(+14 files in other folders)
